<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/registerBox"
        android:layout_width="360dp"
        android:layout_height="560dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_register_box"
        app:layout_constraintEnd_toEndOf="@+id/registerDesc"
        app:layout_constraintStart_toStartOf="@id/registerDesc"
        app:layout_constraintTop_toBottomOf="@+id/registerDesc" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/bespoke_sans_medium"
        android:text="@string/register_title"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/bespoke_sans_regular"
        android:text="@string/register_desc"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/registerTitle"
        app:layout_constraintStart_toStartOf="@+id/registerTitle"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/get_started_button"
        android:fontFamily="@font/bespoke_sans_medium"
        android:letterSpacing="0"
        android:text="@string/register_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/registerBox"
        app:layout_constraintStart_toStartOf="@+id/registerBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bespoke_sans_regular"
        android:text="@string/register_to_login"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bespoke_sans_regular"
        android:text="@string/other_method"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/toLogin"
        app:layout_constraintStart_toStartOf="@+id/toLogin"
        app:layout_constraintTop_toBottomOf="@+id/toLogin" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/facebook" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/registerBox"
        app:layout_constraintStart_toStartOf="@+id/registerBox"
        app:layout_constraintTop_toTopOf="@+id/registerBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="13dp"
            android:singleLine="true"
            android:hint="@string/info_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/nameInputLayout"
        app:layout_constraintStart_toStartOf="@+id/nameInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="13dp"
            android:singleLine="true"
            android:hint="@string/info_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notelpInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="13dp"
            android:singleLine="true"
            android:hint="@string/info_phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/notelpInputLayout"
        app:layout_constraintStart_toStartOf="@+id/notelpInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/notelpInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="13dp"
            android:singleLine="true"
            android:hint="@string/info_password" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>